--- a/index.htm
+++ b/index.htm
@@ -43,6 +43,58 @@
             </div>
         </div>
     </header>
+    <main class="container">
+        <h2 class="text-center">Derniers articles</h2>
+        <div class="row">
+            <section id="articles" class="col-12 col-lg-9">
+                <div class="row my-1">
+                    <!-- start of first article -->
+                    <img src="./img/articles/suzette/suzette-small.jpg" class="col-12 col-md-4 img-fluid"
+                        alt="Photo du premier articles : Crêpe suzette dans une assiette" />
+                    <article class="col-12 col-md-8">
+                        <h3>Lorem, ipsum.</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum tempora
+                            molestiae, dolore hic ex blanditiis?
+                        </p>
+                    </article>
+                </div> <!-- end of foirst article -->
+                <div class="row my-1">
+                    <!-- start of second article -->
+                    <img src="./img/articles/suzette/suzette-small.jpg" class="col-12 col-md-4 img-fluid"
+                        alt="Photo du premier articles : Crêpe suzette dans une assiette" />
+                    <article class="col-12 col-md-8">
+                        <h3>Lorem, ipsum.</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum tempora
+                            molestiae, dolore hic ex blanditiis?
+                        </p>
+                    </article>
+                </div> <!-- end of second article -->
+                <div class="row my-1">
+                    <!-- start of third article -->
+                    <img src="./img/articles/suzette/suzette-small.jpg" class="col-12 col-md-4 img-fluid"
+                        alt="Photo du premier articles : Crêpe suzette dans une assiette" />
+                    <article class="col-12 col-md-8">
+                        <h3>Lorem, ipsum.</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum tempora
+                            molestiae, dolore hic ex blanditiis?
+                        </p>
+                    </article>
+                </div> <!-- end of third article -->
+            </section>
+            <section id="home-form" class="d-none d-lg-block col-lg-3">
+                <div id="search" class="d-grid my-3">
+                    <label for="search" class="form-label">Recherche</label>
+                    <input type="text" class="form-control" id="search" aria-describedby="emailHelp">
+                    <button type="submit" class="btn btn-outline-dark">Ok</button>
+                </div>
+                <div id="newsletter" class="d-grid my-3">
+                    <label for="newsletter" class="form-label">newsletter</label>
+                    <input type="email" class="form-control" id="newsletter" aria-describedby="emailHelp">
+                    <button type="submit" class="btn btn-outline-dark">s'incrire</button>
+                </div>
+            </section>
+        </div>
+    </main>
 
 
     <script src="./js/bootstrap.js"></script>
